--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
             <div class="flex flex-col md:flex-row items-center gap-12 animate-on-scroll">
                 <div class="md:w-1/3">
                     <div class="rounded-xl overflow-hidden shadow-lg">
-                        <img src="https://images.unsplash.com/photo-1557862921-37829c790f19?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1471&q=80"
-                            alt="Nariman" class="w-full h-auto object-cover">
+                        <img src="photo_2025-06-27_02-53-50.jpg" alt="My Photo">
+
                     </div>
                 </div>
                 <div class="md:w-2/3">
