--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                 <!-- Education Item 2 -->
                 <div class="mb-12 relative">
                     <div class="flex flex-col md:flex-row items-center">
-                        <div class="md:w-1/2 md:pr-8 mb-6 md:mb-0 md:order-2 md:text-left">
+                        <div class="bg-gray-50 p-6 rounded-lg shadow-sm">
                             <h3 class="text-xl font-semibold text-gray-900">Ishik Boys High School</h3>
                             <p class="text-indigo-600">2024 - 2025</p>
                         </div>
