--- a/index.html
+++ b/index.html
@@ -302,14 +302,14 @@
                 <!-- Education Item 2 -->
                 <div class="mb-12 relative">
                     <div class="flex flex-col md:flex-row items-center">
-                        <div class="bg-gray-50 p-6 rounded-lg shadow-sm">
+                        <div class="md:w-1/2 md:pr-8 mb-6 md:mb-0 md:text-right">
                             <h3 class="text-xl font-semibold text-gray-900">Ishik Boys High School</h3>
                             <p class="text-indigo-600">2024 - 2025</p>
                         </div>
                         <div
                             class="hidden md:block w-6 h-6 rounded-full bg-indigo-600 absolute left-1/2 transform -translate-x-1/2">
                         </div>
-                        <div class="md:w-1/2 md:pl-8 md:order-1">
+                        <div class="md:w-1/2 md:pl-8">
                             <div class="bg-gray-50 p-6 rounded-lg shadow-sm">
                                 <h4 class="font-medium text-gray-900 mb-2">Internship</h4>
                                 <p class="text-gray-600">Taught and supported ICT courses for high school students,
