--- a/index.html
+++ b/index.html
@@ -555,21 +555,21 @@
                         <div class="mt-8">
                             <h4 class="font-medium text-gray-700 mb-4">Follow Me</h4>
                             <div class="flex space-x-4">
-                                <a href="#"
+                                <a href="https://www.linkedin.com/in/nariman-hisamaddin?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
                                     class="bg-indigo-100 text-indigo-600 p-3 rounded-full hover:bg-indigo-200 transition">
                                     <i class="fab fa-linkedin-in"></i>
                                 </a>
-                                <a href="#"
+                                <a href="https://github.com/Luuifer"
                                     class="bg-indigo-100 text-indigo-600 p-3 rounded-full hover:bg-indigo-200 transition">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="#"
+                                <a href="https://www.instagram.com/nariman_ahmad0?igsh=MXQxeHVibGZjNzBtZg=="
                                     class="bg-indigo-100 text-indigo-600 p-3 rounded-full hover:bg-indigo-200 transition">
                                     <i class="fab fa-instagram"></i>
                                 </a>
-                                <a href="#"
+                                <a href="https://www.facebook.com/share/1Bumw4QUAw/"
                                     class="bg-indigo-100 text-indigo-600 p-3 rounded-full hover:bg-indigo-200 transition">
-                                    <i class="fab fa-twitter"></i>
+                                    <i class="fab fa-facebook"></i>
                                 </a>
                             </div>
                         </div>
