--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@
 
                 <!-- Project 2 -->
                 <div class="bg-white rounded-xl shadow-md overflow-hidden card-hover transition duration-300">
-                    <img src="https://th.bing.com/th/id/R.e1c9c7229ed0fac28dc056d01f0a2f3c?rik=7j%2b8gdCZpDuHsA&pid=ImgRaw&r=0" alt="Robotics Projects" class="w-full h-48 object-cover">
+                    <img src="https://th.bing.com/th/id/R.e1c9c7229ed0fac28dc056d01f0a2f3c?rik=7j%2b8gdCZpDuHsA&pid=ImgRaw&r=0" 
+                        alt="Robotics Projects" class="w-full h-48 object-cover">
 
                     <div class="p-6">
                         <h3 class="text-xl font-semibold text-gray-900 mb-2">Robotics Projects</h3>
